@@ -58,7 +58,7 @@ String day = switch(d){
 ```
 VV
 
-## Sealed Classes
+## Sealed Hierarchies (Classes)
 Added in Java 17<br/>
 JEP 409
 VV
@@ -141,106 +141,14 @@ if(someNumberType instanceof Integer i) {
 
 VV
 
+## More About Data-Oriented Programming
+
+https://inside.java/2024/05/23/dop-v1-1-introduction/
+
+VV
+
 ## API Updates
-
-VV
-
-### Enhanced Pseudo-Random Number Generators
-
-JDK 17<br/>
-JEP 356
-
-VV
-### Enhanced Pseudo-Random Number Generators
-
-* New interface `RandomGenerator` provide uniform API for all Random classes
-* For new interfaces:
-    * `SplittableRandomGenerator`
-    * `JumpableRandomGenerator`
-    * `LeapableRandomGenerator`
-    * `ArbitrarilyJumpableRandomGenerator`
-* Updates to underlying algorithms to be more secure
-VV
-
-## Even More API Updates
 Find them here 👇
 
 [https://docs.oracle.com/en/java/javase/22/docs/api/new-list.html](https://docs.oracle.com/en/java/javase/22/docs/api/new-list.html)
 <img src=images/new-api.png style="width:250px; margin-left: 40%;"/>
-
-VV
-
-## New Runtime Features and Improvements
-VV
-
-## ZGC
-* JDK 15 
-* JEP 377
-* (Ultra-)Low Latency (<1 ms pause times)
-* Scalable (multi-terabyte heaps)
-* Initially single generation, now multi-generation
-* Get started: `-XX:+UseZGC -Xmx<size> -Xlog:gc`
-
-Video: [https://www.youtube.com/watch?v=U2Sx5lU0KM8](https://www.youtube.com/watch?v=U2Sx5lU0KM8)
-VV
-
-## Helpful Null Pointer Exceptions
-JDK 14 <br/>
-JEP 358
-VV
-
-#### Old
-```
-Exception in thread "main" java.lang.NullPointerException
-	at com.oracle.sip.SampleApplication.processRecords(SampleApplication.java:14)
-	at com.oracle.sip.SampleApplication.main(SampleApplication.java:9)
-```
-
-#### New
-```
-Exception in thread "main" java.lang.NullPointerException: Cannot invoke "com.oracle.sip.SampleApplication$MyRec.x()" because "this.myRec" is null
-	at com.oracle.sip.SampleApplication.processRecords(SampleApplication.java:14)
-	at com.oracle.sip.SampleApplication.main(SampleApplication.java:9)
-```
-VV
-
-## AArch64 Support
-
-* Linux JDK 9 (JEP 237)
-* Windows JDK 16 (JEP 388)
-* macOS JDK 17 (JEP 391)
-
-VV
-
-## Deprecations, Removal, and Other Changes
-
-VV
-
-### Deprecations
-
-Security Manager <br/>
-JDK 17<br/>
-JEP 411<br/>
-<br/>
-Applet API<br/>
-JDK 17<br/>
-JEP 398<br/>
-<br/>
-VV
-## Removals
-
-Nashorn (JavaScript Engine)<br/>
-JDK 15<br/>
-JEP 372<br/>
-<br/>
-CMS Garbage Collector<br/>
-JDK 14<br/>
-JEP 363
-VV
-## Other Changes
-
-Strongly Encapsulate JDK Internals<br/>
-JDK 17<br/>
-JEP 403<br/>
-<br/>
-No longer relax strong encapsulation with single argument (i.e. `--illegal-access=permit`)<br/>
